Update version of plugin and fixed tests